--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="cols col_100 cen">
       <a href="/"><img src="/img/logo.png" class="img" /></a>
       <p class="p3"><em>Zyntax Project Template</em></p>
-      <p class="p4">- modificar a gusto -</p>
+      <p class="p4">- modificar a gusto :) -</p>
     </div>
 
     <div class="cols col_100 fs14">
