--- a/donar.html
+++ b/donar.html
@@ -33,40 +33,32 @@
 
       
 <section id="sectMain">
-  <h2>Servicio de Impuestos Internos Chile</h2>
-  <img src="img/flag.jpg" id="imgFlg" alt="Bandera Chile" />
-
-  Seleccionar Imagen:
-  <div id="divFld"></div>
-
-  Vista previa de imagen redimensionada:
-  <div id="divGen">
-    <img src="img/img.jpg" />
-  </div>
-  <button id="btnDwn"><i class="fa fa-cloud-download"></i>Descargar</button>
-
-  Archivo listo para cargar en SII, con extensión .jpg<br />
-  Dimensiones de 120px por 120px y peso máximo de 10Kb
-</section>
-
-<section id="sectTutr">
-  <h2 class="bld">Cómo "obtener" mi Logo <span class="wsn">en formato correcto para el SII</span></h2>
-  <iframe class="ifr s600x340" src="https://www.youtube.com/embed/pmonJJSdqyQ" allowfullscreen></iframe>
-
-  <h2 class="bld mt20">Cómo "cargar" mi Logo <span class="wsn">en el sitio del SII</span></h2>
-  <iframe class="ifr s600x340" src="https://www.youtube.com/embed/1W1wkjvPGgI" allowfullscreen></iframe>
-</section>
-
-<section id="sectForm">
-  Si requieres ayuda técnica o profesional para tu imagen corporativa o desarrollo web, contáctanos:
+  <h2>Realizar Donación a Cambiar Logo SII</h2>
   <br />
   <br />
-  <input class="txt" id="txt_nom" placeholder="Nombre" />
-  <input class="txt" id="txt_eml" placeholder="E-Mail" />
-  <textarea class="txt txa" id="txa_msg" placeholder="Mensaje"></textarea>
+
+  <a href="https://mpago.li/1DBzNih" target="_blank">
+    Donación de $1.000
+    <button id="btnDwn"><i class="fa fa-dollar"></i>Donar $1.000</button>
+  </a>
   <br />
-  <button id="btnSend">Enviar</button>
-  <span class="spanMsg" id="spanMsg">&nbsp;</span>
+  <br />
+
+  <a href="https://mpago.li/21UPxSP" target="_blank">
+    Donación de $3.000
+    <button id="btnDwn"><i class="fa fa-dollar"></i>Donar $3.000</button>
+  </a>
+  <br />
+  <br />
+
+  <a href="https://mpago.li/16tYjeU" target="_blank">
+    Donación de $5.000
+    <button id="btnDwn"><i class="fa fa-dollar"></i>Donar $5.000</button>
+  </a>
+  <br />
+  <br />
+
+  Muchas Gracias :)
 </section>
 
 
