--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <title>Cambiar logo SII</title>
-  <link href="/img/favicon.png?v=0" rel="shortcut icon" />
+  <link href="./img/favicon.png?v=0" rel="shortcut icon" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Dimensiones y tamaño de imagen requerido para factura electrónica del Servicio de Impuestos Internos de Chile" />
   <meta name="keywords" content="Cambiar Logo SII, servicio impuestos internos, dimensiones logo, tamaño logo, tamaño imagen, logo factura electrónica" />
@@ -16,10 +16,10 @@
   <script src="https://cdn.proyectoz.cl/js/jquery.js"></script>
   <script src="https://cdn.proyectoz.cl/js/gnrlz.js"></script>
   <script src="https://cdn.proyectoz.cl/js/maskjz.js"></script>
-  <link href="/css/general.css?v=1" rel="stylesheet" />
-  <script src="/js/general.js?v=1"></script>
-  <script src="/js/formjz.js?v=1"></script>
-  <script src="/js/gtag.js"></script>
+  <link href="./css/general.css?v=1" rel="stylesheet" />
+  <script src="./js/general.js?v=1"></script>
+  <script src="./js/formjz.js?v=1"></script>
+  <script src="./js/gtag.js"></script>
 </head>
 <body>
   <section class="container">
@@ -27,7 +27,7 @@
 
       <header>
         <h1>
-          <a href="/"><img src="/img/logo.png" alt="Cambiar Logo SII" /></a>
+          <a href="./"><img src="./img/logo.png" alt="Cambiar Logo SII" /></a>
         </h1>
       </header>
 
@@ -76,14 +76,14 @@
             Este sitio no tiene relación directa con el Servicio de Impuestos de Chile (SII)<br />
             Es solo una utilidad provista como ayuda para que los usuarios puedan cargar sus logos<br />
             <br />
-            <a href="/donar">Si deseas hacer una donación como agradecimiento puedes hacerlo aquí :)</a><br />
+            <a href="./donar">Si deseas hacer una donación como agradecimiento puedes hacerlo aquí :)</a><br />
             <br />
           </section>
           <section class="cols col_25">
             Diseñado por:
             <br />
             <a href="http://www.koloro.cl/" target="_blank">
-              <img src="/img/koloro.png" />
+              <img src="./img/koloro.png" />
             </a>
           </section>
           <section class="cols col_25"></section>
